RESOLVED FIXED59898
[WINCE] Fix OwnPtr strict issues
https://bugs.webkit.org/show_bug.cgi?id=59898
Summary [WINCE] Fix OwnPtr strict issues
Patrick R. Gansterer
Reported 2011-05-01 15:01:39 PDT
see patch
Attachments
Patch (9.57 KB, patch)
2011-05-01 15:08 PDT, Patrick R. Gansterer
abarth: review+
abarth: commit-queue-
Patrick R. Gansterer
Comment 1 2011-05-01 15:08:29 PDT
Adam Barth
Comment 2 2011-05-01 15:12:01 PDT
Comment on attachment 91849 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=91849&action=review > Source/WebCore/platform/graphics/wince/FontPlatformData.cpp:425 > - m_private->m_rootFontData->m_hfont.set(0); > + m_private->m_rootFontData->m_hfont.clear(); Apparently we prefer assigning nullptr rather than clear.
Patrick R. Gansterer
Comment 3 2011-05-01 15:28:37 PDT
Note You need to log in before you can comment on or make changes to this bug.